<resources>
    <string name="app_name">Walking Pixels</string>
    <string name="lbl_stats_level">"LEVEL %1$d"</string>
    <string name="lbl_stats_xp">"XP: %1$d / %2$d"</string>
    <string name="lbl_stats_spells">"SPELLS"</string>
    <string name="lbl_stats_stamina">"Stamina: %1$d – %2$d"</string>
    <string name="lbl_stats_health">"Health: %1$d – %2$d"</string>
    <string name="lbl_stats_time">"Time: %1$d – %2$.2f"</string>
    <string name="lbl_stats_strength">"Strength: %1$d – %2$.2f"</string>
    <string name="lbl_level_up_stamina">Stamina</string>
    <string name="lbl_level_up_health">Health</string>
    <string name="lbl_level_up_time">Time</string>
    <string name="lbl_level_up_strength">Strength</string>
    <string name="lbl_level_up_level">%1$d</string>
    <string name="lbl_level_up_stats_int">%1$d - %2$d</string>
    <string name="lbl_level_up_stats_float">%1$.2f - %2$.2f</string>
    <string name="lbl_new_spell_text">NEW SPELL GAINED</string>
    <string name="lbl_death_screen_you_died">YOU DIED</string>
    <string name="lbl_map_x">X: %1$d</string>
    <string name="lbl_map_y">Y: %1$d</string>
    <string name="switch_settings_shadow">Shadow </string>
    <string name="switch_settings_3d_models">3D Models </string>
    <string name="switch_settings_walking">Real-Time Walking </string>
    <string name="switch_settings_invert">Invert Controls</string>
    <string name="lbl_settings_settings">SETTINGS</string>
    <string name="lbl_settings_shadow">! Shadows may not work depending on your GPU and may decrease performance</string>
    <string name="lbl_settings_3d_models">! 3D Models may decrease performance</string>
    <string name="lbl_settings_walking">! Real-Time Walking may be somewhat inaccurate</string>
    <string name="lbl_credits_credits">Credits</string>
    <string name="lbl_credits_font">Font:</string>
    <string name="lbl_credits_font_credits">Alagard - Hewett Tsoi</string>
    <string name="lbl_credits_developers">Developers:</string>
    <string name="lbl_credits_developers_credits">Henrik Weidner\nMark Zelenka</string>
    <string name="lbl_credits_art">Artists:</string>
    <string name="lbl_credits_art_credits">Henrik Weidner\nMark Zelenka</string>
    <string name="lbl_walking_out_of_stamina">OUT OF STAMINA!</string>
    <string name="lbl_drawing_damage">%1$d</string>
    <string name="lbl_iconbar_progress">%1$d/%2$d</string>
    <string name="lbl_help_header">HELP</string>
    <string name="lbl_help_page_number">%1$d/%2$d</string>
</resources>