<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:simplebar="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controller.Stats">

    <com.game.walkingpixels.controller.BackgroundGLSurfaceView
        android:id="@+id/myGLSurfaceViewStatsBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/map_top"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/map_bottom"
        tools:ignore="ContentDescription"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/map_middle"
        tools:ignore="ContentDescription"/>

    <TextView
        android:id="@+id/lbl_stats_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_stats_level"
        android:textColor="@color/scroll_foreground"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView5" />

    <TextView
        android:id="@+id/lbl_stats_stamina"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_stats_stamina"
        android:textColor="@color/scroll_foreground"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lbl_stats_spells"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_stats_level"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/lbl_stats_health"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_stats_health"
        android:textColor="@color/scroll_foreground"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lbl_stats_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_stats_stamina" />

    <TextView
        android:id="@+id/lbl_stats_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_stats_time"
        android:textColor="@color/scroll_foreground"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lbl_stats_strength"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_stats_health" />

    <TextView
        android:id="@+id/lbl_stats_strength"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_stats_strength"
        android:textColor="@color/scroll_foreground"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/lbl_stats_spells"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bar_stats_level"
        app:layout_constraintVertical_bias="0.8" />

    <com.game.walkingpixels.view.Simplebar
        android:id="@+id/bar_stats_level"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_stats_xp"
        app:layout_constraintWidth_percent="0.75"
        simplebar:simple_bar_progress="@drawable/simplebar_xp_clip"/>

    <TextView
        android:id="@+id/lbl_stats_spells"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/lbl_stats_spells"
        android:textColor="@color/scroll_foreground"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/list_stats_spells"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ListView
        android:id="@+id/list_stats_spells"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintDimensionRatio="1.2"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.75"/>

    <TextView
        android:id="@+id/lbl_stats_xp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/lbl_stats_xp"
        android:textColor="@color/scroll_foreground"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbl_stats_level" />


</androidx.constraintlayout.widget.ConstraintLayout>